# whisper_wrapper_rust

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: download_and_transcribe.rs  simple_transcription.rs
src/: bindings.rs  commands.rs  context.rs  download.rs  error.rs  lib.rs  main.rs  params.rs
tests/: basic_test.rs
